added stats for regimen and tumors

--- a/Pymaceuticals/pymaceuticals_starter.ipynb
+++ b/Pymaceuticals/pymaceuticals_starter.ipynb
@@ -465,44 +465,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 95,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['Mouse ID', 'Drug Regimen', 'Sex', 'Age_months', 'Weight (g)',\n",
-       "       'Timepoint', 'Tumor Volume (mm3)', 'Metastatic Sites'],\n",
-       "      dtype='object')"
-      ]
-     },
-     "execution_count": 78,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Index(['Mouse ID', 'Drug Regimen', 'Sex', 'Age_months', 'Weight (g)',\n",
     " #      'Timepoint', 'Tumor Volume (mm3)', 'Metastatic Sites'],\n",
-    "   #   dtype='object')\n",
-    "\n",
-    "# Generate a summary statistics table of mean, median, variance, standard deviation, and SEM of the tumor volume for each regimen\n",
+    "   #   dtype='object')# Generate a summary statistics table of mean, median, variance, standard deviation, and SEM of the tumor volume for each regimen\n",
     "\n",
     "# Use groupby and summary statistical methods to calculate the following properties of each drug regimen: \n",
     "# mean, median, variance, standard deviation, and SEM of the tumor volume. \n",
+    "mean_regimen=clean_study_data.groupby([\"Drug Regimen\"]).mean()[\"Tumor Volume (mm3)\"]\n",
+    "median_regimen=clean_study_data.groupby([\"Drug Regimen\"]).median()[\"Tumor Volume (mm3)\"]\n",
+    "var_regimen=clean_study_data.groupby([\"Drug Regimen\"]).var()[\"Tumor Volume (mm3)\"]\n",
+    "std_regimen=clean_study_data.groupby([\"Drug Regimen\"]).std()[\"Tumor Volume (mm3)\"]\n",
+    "sem_regimen=clean_study_data.groupby([\"Drug Regimen\"]).sem()[\"Tumor Volume (mm3)\"]\n",
+    "\n",
     "# Assemble the resulting series into a single summary dataframe.\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 90,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Drug Regimen\n",
+      "Capomulin    40.675741\n",
+      "Ceftamin     52.591172\n",
+      "Infubinol    52.884795\n",
+      "Ketapril     55.235638\n",
+      "Naftisol     54.331565\n",
+      "Placebo      54.033581\n",
+      "Propriva     52.320930\n",
+      "Ramicane     40.216745\n",
+      "Stelasyn     54.233149\n",
+      "Zoniferol    53.236507\n",
+      "Name: Tumor Volume (mm3), dtype: float64 Drug Regimen\n",
+      "Capomulin    41.557809\n",
+      "Ceftamin     51.776157\n",
+      "Infubinol    51.820584\n",
+      "Ketapril     53.698743\n",
+      "Naftisol     52.509285\n",
+      "Placebo      52.288934\n",
+      "Propriva     50.446266\n",
+      "Ramicane     40.673236\n",
+      "Stelasyn     52.431737\n",
+      "Zoniferol    51.818479\n",
+      "Name: Tumor Volume (mm3), dtype: float64\n"
+     ]
+    }
+   ],
    "source": [
     "# Generate a summary statistics table of mean, median, variance, standard deviation, and SEM of the tumor volume for each regimen\n",
-    "regimen_tumor_data=clean_study_data.groupby(\"Drug Regimen\")\n",
-    "regimen_tumor_data\n",
+    "\n",
     "# Using the aggregation method, produce the same summary statistics in a single line\n"
    ]
   },
